--- a/Quizzard/style.css
+++ b/Quizzard/style.css
@@ -5,3 +5,12 @@
   border:2px solid Indigo;
   max-width: 500px;
 }
+#block_quote {
+  text-indent: 50px;
+}
+#keyword {
+  font-weight: bold;
+}
+h3 {
+  font-weight: bold;
+}
