--- a/Quizzard/style.css
+++ b/Quizzard/style.css
@@ -1,9 +1,33 @@
+* {
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+header li {
+  list-style: none;
+  display: inline;
+}
+a:link, a:visited {
+  text-decoration: none;
+  background-color: ivory;
+  border: 1px solid blue;
+  color: sky-blue;
+  width: 400px;
+  margin: 3px;
+  padding: 12px;
+}
+#current_page a:link, #current_page a:visited {
+  background-color: deepskyblue;
+  color: ivory;
+}
+
 #q_control, #a_control {
   background-color: DeepSkyBlue;
   border:2px solid Indigo;
   max-width: 500px;
   min-height: 300px;
   margin-top: 5px;
+  opacity: 90%;
 }
 
 #question, #answer {
