--- a/Quizzard/style.css
+++ b/Quizzard/style.css
@@ -7,7 +7,7 @@ header li {
   list-style: none;
   display: inline;
 }
-a:link, a:visited {
+header :link, header :visited {
   text-decoration: none;
   background-color: ivory;
   border: 1px solid blue;
@@ -28,7 +28,13 @@ a:link, a:visited {
   min-height: 300px;
   margin-top: 5px;
   opacity: 90%;
+  width:50%;
+  float: left;
+  padding: 10px;
+}
 
+#a_control {
+  margin-left: 3px;
 }
 
 #question, #answer {
