--- a/Project 2/Prototype/src/main/webapp/resources/floating-labels2.css
+++ b/Project 2/Prototype/src/main/webapp/resources/floating-labels2.css
@@ -15,12 +15,22 @@ body {
   -ms-flex-align: center;
   -ms-flex-pack: center;
   -webkit-box-align: center;
-  align-items: center;
+
   -webkit-box-pack: center;
-  justify-content: center;
+
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: rgb(0,74,173);
+}
+
+.menu-sq {
+  margin-top: 5px; 
+  width: 60px;
+  height:60px; 
+  background-color:rgb(255,255,255);
+  border-color:rgb(255,255,255); 
+  color:rgb(0,200,223); 
+  font-weight:500;
 }
 
 .form-signin {
@@ -28,6 +38,8 @@ body {
   max-width: 420px;
   padding: 15px;
   margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-label-group {
